[gd_scene load_steps=4 format=3 uid="uid://co5lq37w3ttg8"]

[ext_resource type="Texture2D" uid="uid://bsei3yb2rgxyw" path="res://graphics/enemies/wolf.png" id="1_qf0y4"]
[ext_resource type="Script" path="res://scenes/wolfScript.gd" id="1_rj4cf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tydyq"]
size = Vector2(24, 107)

[node name="wolf" type="CharacterBody2D"]
script = ExtResource("1_rj4cf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4.432, 4)
texture = ExtResource("1_qf0y4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 6.5)
shape = SubResource("RectangleShape2D_tydyq")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
